# infrabase

./: .gitignore  Cargo.toml  README
migrations/2019-07-20-012659_create_machines/: down.sql  up.sql
schema/: down.sql  up.sql
src/: data.rs  macros.rs  main.rs  models.rs  nix.rs  schema.rs  table_cell.rs  wireguard.rs
