[package]
name = "infrabase"
version = "0.1.0"
authors = ["Ivan Kozik <ivan@ludios.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6.0"
dirs = "2.0"
dotenv = "0.15.0"
chrono = "0.4.7"
structopt = "0.3.4"
log = "0.4.7"
env_logger = "0.7.0"
indoc = { version = "0.3.3", features = ["unstable"] }
itertools = "0.8.0"
# Upstream stopped development
natural_sort = { git = "https://github.com/ludios/natural-sort-rs" }
tabwriter = "1.1.0"
termcolor = "1.0.5"
runtime-fmt = "0.4.1"
postgres = { git = "https://github.com/sfackler/rust-postgres", features = ["with-chrono-0_4"] }
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres" }
