[package]
name = "infrabase"
version = "0.1.0"
authors = ["Ivan Kozik <ivan@ludios.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4"
dotenv = "0.15"
chrono = "0.4"
structopt = "0.3"
log = "0.4"
env_logger = "0.9"
itertools = "0.10"
# Upstream stopped development
natural_sort = { git = "https://github.com/ludios/natural-sort-rs" }
tabwriter = "1"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
tokio-postgres = { version = "0.7" }
anyhow = "1.0"

[profile.dev]
# Reduce debug rebuild time from 2.8s to 2.2s on 4790K
# https://github.com/rust-gamedev/wg/issues/50#issuecomment-527160611
debug = false

# Optimize our dependencies (but not our own crate to avoid long rebuild times)
[profile.dev.package."*"]
opt-level = 3
